--- a/todoapp/todolist/templates/todolist/new.html
+++ b/todoapp/todolist/templates/todolist/new.html
@@ -4,7 +4,7 @@
 	<title>hello</title>
 </head>
 <body>
-	<form method="post" action="/create/">
+	<form method="post" action="{% url 'new' %}">
 		{% csrf_token %}
 		{{form}}
 
