--- a/todoapp/todolist/templates/todolist/new.html
+++ b/todoapp/todolist/templates/todolist/new.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>hello</title>
-</head>
-<body>
+{% extends "todolist/main.html" %}
+{% block title %}Create list{% endblock %}
+
+{% block content %}
 	<form method="post" action="{% url 'new' %}">
 		{% csrf_token %}
 		{{form}}
-
 		<button type="submit">enter</button>
 	</form>
-</body>
-</html>
+{% endblock %}
