--- a/todoapp/todolist/templates/todolist/list.html
+++ b/todoapp/todolist/templates/todolist/list.html
@@ -11,6 +11,9 @@
 				<input type="checkbox" value="clicked" name="c{{item.id}}">
 			{% endif %}
 			<input type="text" value="{{item.text}}" name="i{{item.text}}">
+			<form method="get" action="{% url 'delItem' %}">
+				<button name="delThis" type="submit" value="{{item.id}}">remove</button>
+			</form>
 			<br>
 		{% endfor %}
 		<button type="submit" name="save" value="save">Save Changes</button>
