--- a/todoapp/todolist/templates/todolist/view.html
+++ b/todoapp/todolist/templates/todolist/view.html
@@ -2,9 +2,14 @@
 {% block title %}My Lists{% endblock %}
 
 {% block content %}
+	<form method="get" action="{% url 'delList' %}">
 	{% for x in mylist %}
-		<p>><a href="/view/{{x.id}}">{{x}}</a></p>
-	{% endfor %}
+		<!-- KNOW TOMMOROW ABOUT DELETING AND IF WE NEED TO USE REQUEST METHODS -->
+			<p>><a href="/view/{{x.id}}">{{x}}</a>
+				<button name="delThis" type="submit" value="{{x.id}}">remove</button>
+			</p>
+		{% endfor %}
+	</form>
 	<br>
 	<form method="post" action="{% url 'view' %}">
 		{% csrf_token %}
