add delete button for items

--- a/todoapp/todolist/templates/todolist/list.html
+++ b/todoapp/todolist/templates/todolist/list.html
@@ -12,7 +12,7 @@
 				<input type="checkbox" value="clicked" name="c{{item.id}}">
 			{% endif %}
 			<input type="text" value="{{item.text}}" name="i{{item.text}}">
-			<button type="submit" name="delThis" value="{{item.id}}" >tangina</button>
+			<button type="submit" name="delThis" value="{{item.id}}" >remove</button>
 			<br>
 		{% endfor %}
 			<br>
