--- a/todoapp/todolist/templates/todolist/view.html
+++ b/todoapp/todolist/templates/todolist/view.html
@@ -16,4 +16,5 @@
 		{{form}}
 		<button type="submit">enter</button>
 	</form>
+	<button onclick="window.location.href='/signout'">Logout Account</button>
 {% endblock %}
