start one to one relationship

--- a/todoapp/todolist/templates/todolist/signup.html
+++ b/todoapp/todolist/templates/todolist/signup.html
@@ -9,6 +9,7 @@
 		{% for attribute in form %}
 			{{attribute.label}} {{attribute}}<br>
 		{% endfor %}
+		<p>Note: Passwords required to have letters from A-Z, symbols like @,#, etc., and numbers from 0-9</p>
 		<button type="submit">Register Account</button>
 	</form>
 
