fixed user access to objects

--- a/todoapp/todolist/templates/todolist/list.html
+++ b/todoapp/todolist/templates/todolist/list.html
@@ -20,4 +20,5 @@
 		<input type="text" name="newItem">
 		<button type="submit" name="addItem" value="addItem">Add Item</button>
 	</form>
+	<button onclick="window.location.href='/signout'">Logout Account</button>
 {% endblock %}
