add status messages for user registering

--- a/todoapp/todolist/templates/todolist/signin.html
+++ b/todoapp/todolist/templates/todolist/signin.html
@@ -11,7 +11,7 @@
 	</form>
 
 	{% for message in messages %}
-		<p>{{message}}</p>
+		<p style="color: green">{{message}}</p>
 	{% endfor %}
 
 	<p>Register new account <a href="{% url 'signup' %}">here</a></p>
