add template for every list

--- a/todoapp/todolist/templates/todolist/list.html
+++ b/todoapp/todolist/templates/todolist/list.html
@@ -23,8 +23,8 @@
       {% csrf_token %}
       <div
         class="app-container d-flex align-items-center justify-content-center flex-column">
-        {{mylist.title}}
-        <h3>Todo App</h3>
+        Todo App
+        <h3><b>{{mylist.title}}</b></h3>
         <div class="d-flex align-items-center mb-3">
           <div class="form-group mr-3 mb-0">
             <input type="text" name="newItem" class="form-control" id="formGroupExampleInput" placeholder="Enter a task here"/>
