--- a/todoapp/todolist/templates/todolist/list.html
+++ b/todoapp/todolist/templates/todolist/list.html
@@ -2,18 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
-
-    <style>
-      .app-container {
-        height: 100vh;
-        width: 100%;
-      }
-      .complete {
-        text-decoration: line-through;
-      }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'todolist/style.css' %}">
   </head>
   <body>
     <form method="post" action='#'>
@@ -74,6 +64,5 @@
         </div>
       </div>
     </form>
-  <link rel="stylesheet" type="text/css" href="{% static 'todolist/style.css' %}">
   </body>
 </html>
