--- a/todoapp/todolist/templates/todolist/signin.html
+++ b/todoapp/todolist/templates/todolist/signin.html
@@ -48,11 +48,10 @@
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
 					</div>
-			
 				</div>
 			</div>
 		</div>
 	</div>
+	<!-- Download this template here: "https://jsfiddle.net/ivanov11/dghm5cu7/" -->
 </body>
-<!-- DENIS IVY'S TEMPLATE -->
 </html>
