--- a/todoapp/todolist/templates/todolist/signup.html
+++ b/todoapp/todolist/templates/todolist/signup.html
@@ -72,7 +72,7 @@
 		}
 	</script>
 </body>
-<!-- DENIS IVY'S TEMPLATE -->
+<!-- Download this temlate here: https://jsfiddle.net/ivanov11/hzf0jxLg/ -->
 </html>
 
 
