--- a/todoapp/todolist/templates/todolist/signin.html
+++ b/todoapp/todolist/templates/todolist/signin.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 		</div>
+		<center><p>See this temlate <a href="https://jsfiddle.net/ivanov11/hzf0jxLg/" target="_blank">here</a>.</p></center>
 	</div>
-	<!-- Download this template here: "https://jsfiddle.net/ivanov11/dghm5cu7/" -->
 </body>
 </html>
