--- a/todoapp/todolist/templates/todolist/signup.html
+++ b/todoapp/todolist/templates/todolist/signup.html
@@ -54,6 +54,7 @@
 				</div>
 			</div>
 		</div>
+		<center><p>See this temlate <a href="https://jsfiddle.net/ivanov11/hzf0jxLg/" target="_blank">here</a>.</p></center>
 	</div>
 	<script>
 						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
@@ -72,7 +73,6 @@
 		}
 	</script>
 </body>
-<!-- Download this temlate here: https://jsfiddle.net/ivanov11/hzf0jxLg/ -->
 </html>
 
 
